# superAIAutoCutVideo

./: .editorconfig  .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  USAGE.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: project.md  windows-subprocess.mdc
.github/workflows/: build-windows.yml  main.yml
.trae/document/: api-postman-curl.md  fun_asr_design.md  omnivoice-api-postman-curl.md  前端开发清单-VoxCPM本地TTS.md  前端开发清单-阿里云千问在线TTS.md  后端开发清单-VoxCPM本地TTS.md  后端开发清单-阿里云千问在线TTS.md
.trae/documents/: Edge TTS 集成开发步骤方案.md  Qwen-TTS模型介绍文档.md  Qwen3-TTS前端接入开发清单.md  Qwen3-TTS前端改造设计.md  Qwen3-TTS后端改造设计.md  Qwen3-TTS后端移植与模型管理方案.md  Switch TTS voices to tencent_tts_data.json and persist VoiceType correctly.md  TTS 配置与音色元数据补充方案.md  TrimTimeline-时间轴缩放与游标拖拽交互设计.md  index-tts-and-gpu-design.md  plan_20260205_124907.md  qwen3_tts_gpu_usage.md  为脚本片段生成腾讯TTS配音并与视频片段对齐混流.md  前端接入字幕识别（bcut + FunASR）.md  后端启动与端口策略改造清单.md  后端运行日志与接口报错暴露开发清单.md  字幕提取与脚本生成解耦前端改造开发清单.md  字幕提取与脚本生成解耦后端改造开发清单.md  并发配音改造方案.md  支持多视频上传与合并.md  用户数据目录改造清单.md  电影脚本长度（固定条数）前端改造开发清单.md  电影脚本长度（固定条数）后端改造开发清单.md  视频逐段修剪弹窗-PRD.md  视频逐段修剪弹窗-技术架构.md  视频逐段修剪弹窗-页面设计.md  通过Moondream进行视频帧分析-开发清单.md  项目详情布局修改figma格式.json  首页界面修改figma格式.json
backend/: backend.spec  main.py  mypy.ini  preview_test.json  requirements.runtime.txt  requirements.txt  sox.py  superAutoCutVideoBackend.spec  test_websocket.py  tmp6n0lrhxn  websocket_test.html
backend/config/: ai_config.json  content_model_config.json  prompts.json  video_model_config.json
backend/docs/: AI大模型调用框架使用文档.md  JianYingASR.py  demo_draft_manager.py  script_generation_algorithm.md  tts_concurrency_refactor.md  uploads路径统一改造清单.md  字幕独立executor改造方案.md  提示词自定义与选择功能后端改造清单.md
backend/docs/edge_tts_standalone/: README.md  main.py  requirements.txt  utils.py  voice_manager.py
backend/modules/: __init__.py  app_paths.py  audio_normalizer.py  audio_speed_processor.py  edge_tts_service.py  fun_asr_acceleration.py  fun_asr_model_manager.py  fun_asr_service.py  json_sanitizer.py  moondream_acceleration.py  moondream_inference_settings.py  moondream_model_manager.py  patched_fun_asr_nano.py  projects_store.py  qwen3_tts_model_manager.py  qwen3_tts_service.py  qwen3_tts_voice_store.py  qwen_online_tts_service.py  qwen_online_tts_voice_store.py  runtime_log_store.py  subprocess_no_console.py  subtitle_utils.py  task_cancel_store.py  task_progress_store.py  task_scheduler.py  transnetv2.py  transnetv2_torch.py  tts_service.py  video_processor.py  voxcpm_tts_model_manager.py  voxcpm_tts_service.py  voxcpm_tts_voice_store.py  ws_manager.py
backend/modules/ai/: __init__.py  base.py
backend/modules/config/: __init__.py  ai_config.py  content_model_config.py  generate_concurrency_config.py  jianying_config.py  tts_config.py  video_model_config.py
backend/modules/edge_tts_component/: README.md  __init__.py  component.py  voice_utils.py
backend/modules/indextts/: __init__.py  client.py  connection_store.py  service.py
backend/modules/omnivoice_tts/: __init__.py  client.py  connection_store.py  service.py
backend/modules/prompts/: __init__.py  base.py  prompt_manager.py
backend/modules/qwen3_tts_acceleration/: __init__.py  detector.py
backend/modules/voxcpm_tts_acceleration/: __init__.py  detector.py
backend/routes/: __init__.py  ai_routes.py  content_model_routes.py  fun_asr_routes.py  generate_routes.py  health_routes.py  indextts_routes.py  jianying_config_routes.py  log_routes.py  moondream_routes.py  omnivoice_tts_routes.py  project_routes.py  prompts_routes.py  qwen3_tts_routes.py  qwen_online_tts_routes.py  storage_routes.py  tts_routes.py  video_model_routes.py  voxcpm_tts_routes.py
backend/scripts/: diag_import_torch.py  install_llama_gpu_pack.bat  mirror_tencent_tts_audio.py  repro_replication_pad.py
backend/serviceData/: tencent_tts_data.json
backend/serviceData/tts/: edge_voices_cache.json
backend/services/: __init__.py  ai_service.py  asr_base.py  asr_batch.py  asr_bcut.py  asr_data.py  asr_jianying.py  asr_utils.py  audio_chunking.py  extract_scene_service.py  extract_subtitle_service.py  generate_copywriting_service.py  generate_script_service.py  jianying_draft_manager.py  jianying_draft_packager.py  jianying_draft_service.py  script_generation_service.py  video_generation_service.py  vision_frame_analysis_service.py  vision_scene_status.py
backend/services/reference_copywriting_wash/: __init__.py  llm_client.py  pipeline.py  prompts.py  quoted_strip.py  splitter.py  subs_text.py
backend/services/script_generation/: constants.py  copywriting_builder.py  length_planner.py  plot_analysis.py  prompt_resolver.py  scene_utils.py  script_builder.py  service.py  subtitle_utils.py  visual_script_builder.py
docs/: FRONTEND_README.md  PROJECT_SUMMARY.md  backend_api_documentation.md  frame_benchmark.py  后端依赖安装命令（GPU版llama-cpp）.md  打包说明.md
frontend/: .eslintrc.json  _write_content_model.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/scripts/: sync-tauri-version.mjs  tauri.mjs
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AppLoadingScreen.tsx  Navigation.tsx  SettingsPage.tsx  StatusPanel.tsx  VideoProcessor.tsx
scripts/: build.bat  build.ps1  build.sh  debug_content_model_config.py  dev.bat  dev.sh  dev_tauri.sh  get_narration_prompt.ps1  offline-bundle-manifest.example.json  split-backend.ps1  stage-runtime-patch-for-offline.ps1  trim-runtime-manifest-chunks.ps1  write-offline-bundle-manifest.ps1
src-tauri/: Cargo.toml  tauri.bundle.conf.json  tauri.conf.json  tauri.dev.conf.json  tauri.gpu.embed.nsis.conf.json  tauri.gpu.nsis.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: custom_installer.nsi
src-tauri/resources/: NOTICE-FFmpeg.txt
src-tauri/src/: json_util.rs  main.rs  offline_bundle.rs  runtime_updater.rs
src-tauri/windows/: installer.nsi
tests/tauri_cleanup/: README.md  cleanup_tauri.bat  cleanup_tauri.ps1
(+204 files in other folders)
